2002-10-03  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/lsearch.n: Better specification of what happens when -sorted
	is mixed with other options. [Bug 617816]

2002-10-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclProc.c (TclCreateProc): mask out VAR_UNDEFINED for
	precompiled locals to support 8.3 precompiled code.
	(Tcl_ProcObjCmd): correct 2002-09-26 fix to look for tclProcBodyType.

2002-10-01  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* doc/socket.n: Mentioned that ports may be specified as serivce
	names as well as integers. [Bug 616843]

2002-09-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclCompCmds.c (TclCompileRegexpCmd): correct the
	checking for bad re's that didn't terminate the re string.
	Resultant compiles were correct, but much slower than necessary.

2002-09-29  David Gravereaux <davygrvy@pobox.com>

	* win/tclAppInit.c: Added proper exiting conditions using Win32
	console signals.  This handles the existing lack of a Ctrl+C exit
	to call exit handlers when built for thread support.  Also, properly
	handles exits from other conditions such as CTRL_CLOSE_EVENT,
	CTRL_LOGOFF_EVENT, and CTRL_SHUTDOWN_EVENT signals.  In all cases,
	exit handlers will be called.  [Bug 219355]

	* win/makefile.vc: Added missing tclThreadAlloc.c to the build
	rules and defines USE_THREAD_ALLOC when TCL_THREADS is defined
	to get the new behavior by default.

2002-09-27  Don Porter  <dgp@users.sourceforge.net>

	* README:		Bumped to version 8.4.1 to avoid confusion
	* generic/tcl.h:	of CVS snapshots with the actual 8.4.0
	* tools/tcl.wse.in:	release.
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:

	* unix/configure:	autoconf
	* win/configure:

2002-09-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* unix/configure: regen.
	* unix/tcl.m4: improve AIX-4/5 64bit compilation support.

	* generic/tclProc.c (Tcl_ProcObjCmd): correct overeager
	optimization of noop proc to handle the precompiled case. (sofer)
