@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: binary.test,v 1.9 2002/02/15 14:28:49 dkf Exp $
+# RCS: @(#) $Id: binary.test,v 1.10 2002/10/03 13:34:32 dkf Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -606,7 +606,7 @@ test binary-20.4 {Tcl_BinaryObjCmd: scan} {
 } {1 abc}
 test binary-20.5 {Tcl_BinaryObjCmd: scan} {
     catch {unset arg1}
-    list [binary scan abc a5 arg1] [info exist arg1]
+    list [binary scan abc a5 arg1] [info exists arg1]
 } {0 0}
 test binary-20.6 {Tcl_BinaryObjCmd: scan} {
     set arg1 foo
@@ -645,7 +645,7 @@ test binary-21.4 {Tcl_BinaryObjCmd: scan} {
 } {1 abc}
 test binary-21.5 {Tcl_BinaryObjCmd: scan} {
     catch {unset arg1}
-    list [binary scan abc A5 arg1] [info exist arg1]
+    list [binary scan abc A5 arg1] [info exists arg1]
 } {0 0}
 test binary-21.6 {Tcl_BinaryObjCmd: scan} {
     set arg1 foo
