@@ -11,7 +11,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: env.test,v 1.16 2002/07/10 11:56:44 dgp Exp $
+# RCS: @(#) $Id: env.test,v 1.17 2002/10/03 13:34:32 dkf Exp $
 
 package require tcltest 2
 namespace import -force ::tcltest::*
@@ -198,7 +198,7 @@ test env-5.2 {corner cases - unset the env array} {} {
     interp create i 
     i eval { unset env }
     i eval { set env(THIS_SHOULDNT_EXIST) a}
-    set result [info exist env(THIS_SHOULDNT_EXIST)]
+    set result [info exists env(THIS_SHOULDNT_EXIST)]
     interp delete i
     set result
 } {0}
@@ -215,7 +215,7 @@ test env-5.3 {corner cases - unset the env in master should unset child} {} {
     set result
 } {a 1}
 test env-5.4 {corner cases - unset the env array} {} {
-    # The info exist command should be in synch with the env array.
+    # The info exists command should be in synch with the env array.
     # Know Bug: 1737
 
     interp create i 
